# guilauncher

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  gui-launcher-manifest.rc
.cargo/: config.toml
.github/workflows/: release.yml
assets/: rlbot-banner.txt
src/: main.rs  self_updater.rs
