[package]
name = "rlbotguilauncher"
version = "0.6.0"
edition = "2021"
description = "RLBotGUI Launcher"
license-file = "LICENSE"
repository = "https://github.com/swz-git/guilauncher"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
strip = true
opt-level = "z"

[dependencies]
async-compression = { version = "0.4.8", features = ["tokio", "xz"] }
clap = { version = "4.4.2", features = ["derive"] }
console = "0.15.7"
directories = "5.0.1"
self-replace = "1.3.7"
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"
tokio-tar = "0.3.1"
tracing = "0.1.40"
tracing-subscriber = "0.3.17"
zip = { version = "0.6.6", default-features = false, features = ["deflate"] }
yansi = "1.0.1"
ureq = "2.9.6"
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "io-std"] }
tokio-stream = "0.1.15"

[build-dependencies]
embed-resource = "2.4.0"
static_vcruntime = "2.0.0"
