[package]
name = "rlbotguilauncher"
version = "0.8.1"
edition = "2021"
description = "RLBotGUI Launcher"
license-file = "LICENSE"
repository = "https://github.com/swz-git/guilauncher"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
strip = true
opt-level = "z"

[dependencies]
clap = { version = "4.4.2", features = ["derive"] }
console = "0.15.7"
directories = "5.0.1"
self-replace = "1.3.6"
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"
tracing = "0.1.40"
tracing-subscriber = "0.3.17"
zip = { version = "0.6.6", default-features = false, features = ["deflate"] }
yansi = "1.0.1"
ureq = "2.10.1"
xz = "0.1.0"
tar = "0.4.43"
anyhow = "1.0.93"
indicatif = "0.17.8"

[build-dependencies]
embed-resource = "2.4.0"
static_vcruntime = "2.0.0"
